Fixed 'jump to' links

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -179,6 +179,8 @@ header{
 }
 
 h1 { text-align: center;
+	padding-top: 40px;
+		margin-top: -40px;
 }
 
 h2 {
